added missing semicolons in some inline styles of sample site eliminated one level of directory hierachy in sparkplug directory .htaccess: moved use of header directive inside check for enabled headers module

--- a/core/install/sites/creamery/design/templates/article.html
+++ b/core/install/sites/creamery/design/templates/article.html
@@ -11,7 +11,7 @@
             <et:design:snippet name="article" />
             <et:design:snippet name="sidebar_articles" />
          </div>
-         <div style="clear:both"></div>
+         <div style="clear:both;"></div>
       </div>
       <div id="footer-wrapper">
          <div id="footer">
