store admin URL in prefs new tag: <et:admin_url /> xml import/export support

--- a/core/install/sites/creamery/design/templates/error_default.html
+++ b/core/install/sites/creamery/design/templates/error_default.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <et:if_maintenance>
-   Under Construction
+   <body>
+	   <p>Under Construction</p>
+   </body>
 <et:else />
 <et:design:snippet name="head" />
    <body>
